lesson5/rules.v4
# Generated by iptables-save v1.8.10 on Sat Jul  6 13:55:51 2024
*raw
:PREROUTING ACCEPT [181731:50116757]
:OUTPUT ACCEPT [181517:50614002]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-rpf-skip - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:PWuxTAIaFCtsg5Qa" -m mark --mark 0x40000/0x40000 -j cali-rpf-skip
-A cali-PREROUTING -m comment --comment "cali:fSSbGND7dgyemWU7" -m mark --mark 0x40000/0x40000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:ImU0-4Rl2WoOI9Ou" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:lV4V2MPoMBf0hl9T" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Sat Jul  6 13:55:51 2024
# Generated by iptables-save v1.8.10 on Sat Jul  6 13:55:51 2024
*mangle
:PREROUTING ACCEPT [1506:103549]
:INPUT ACCEPT [181733:50124155]
:FORWARD ACCEPT [11:2286]
:OUTPUT ACCEPT [181529:50623601]
:POSTROUTING ACCEPT [181540:50625887]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:nnqPh8lh2VOogSzX" -j MARK --set-xmark 0x0/0xf0000
-A cali-POSTROUTING -m comment --comment "cali:nquN8Jw8Tz72pcBW" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:jWrgvDQ0xEZHmta3" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Sat Jul  6 13:55:51 2024
# Generated by iptables-save v1.8.10 on Sat Jul  6 13:55:51 2024
*nat
:PREROUTING ACCEPT [4:562]
:INPUT ACCEPT [4:562]
:OUTPUT ACCEPT [1815:131522]
:POSTROUTING ACCEPT [1815:131522]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-AUBLYMAX7EU2EXXD - [0:0]
:KUBE-SEP-GVSCH6PWZAPV33VJ - [0:0]
:KUBE-SEP-RZ3BMT5M4WPB3FC7 - [0:0]
:KUBE-SEP-UVRQ2K3NYG3GVTIQ - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-AUBLYMAX7EU2EXXD -s 10.1.43.76/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-AUBLYMAX7EU2EXXD -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.1.43.76:53
-A KUBE-SEP-GVSCH6PWZAPV33VJ -s 10.1.43.76/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-GVSCH6PWZAPV33VJ -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.1.43.76:9153
-A KUBE-SEP-RZ3BMT5M4WPB3FC7 -s 10.1.43.76/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-RZ3BMT5M4WPB3FC7 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.1.43.76:53
-A KUBE-SEP-UVRQ2K3NYG3GVTIQ -s 192.168.1.76/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-UVRQ2K3NYG3GVTIQ -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 192.168.1.76:16443
-A KUBE-SERVICES -d 10.152.183.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.152.183.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.152.183.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.152.183.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.1.0.0/16 -d 10.152.183.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.1.43.76:53" -j KUBE-SEP-RZ3BMT5M4WPB3FC7
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.1.0.0/16 -d 10.152.183.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.1.43.76:9153" -j KUBE-SEP-GVSCH6PWZAPV33VJ
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.1.0.0/16 -d 10.152.183.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 192.168.1.76:16443" -j KUBE-SEP-UVRQ2K3NYG3GVTIQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.1.0.0/16 -d 10.152.183.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.1.43.76:53" -j KUBE-SEP-AUBLYMAX7EU2EXXD
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o vxlan.calico -m comment --comment "cali:e9dnSgSVNmIcpVhP" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Sat Jul  6 13:55:51 2024
# Generated by iptables-save v1.8.10 on Sat Jul  6 13:55:51 2024
*filter
:INPUT ACCEPT [164246:42283317]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [166510:42723072]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali4b77035236e - [0:0]
:cali-fw-calie7c5034ed69 - [0:0]
:cali-pri-_PTRGc0U-L5Kz7V6ERW - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_PTRGc0U-L5Kz7V6ERW - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali4b77035236e - [0:0]
:cali-tw-calie7c5034ed69 - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -j KUBE-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -s 10.1.0.0/16 -m comment --comment "generated for MicroK8s pods" -j ACCEPT
-A FORWARD -d 10.1.0.0/16 -m comment --comment "generated for MicroK8s pods" -j ACCEPT
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:NOSxoaGx8OIstr1z" -j cali-cidr-block
-A cali-INPUT -p udp -m comment --comment "cali:J76FwxInZIsk7uKY" -m comment --comment "Allow IPv4 VXLAN packets from allowed hosts" -m multiport --dports 4789 -m set --match-set cali40all-vxlan-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p udp -m comment --comment "cali:EDCNTTxYfggApx8C" -m comment --comment "Drop IPv4 VXLAN packets from non-allowed hosts" -m multiport --dports 4789 -m addrtype --dst-type LOCAL -j DROP
-A cali-INPUT -i cali+ -m comment --comment "cali:H03xYXARh4e8pwd4" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:MN6K3isIWBigb1Va" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:OSYphBLwOgic22Hz" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:rmi2_piRVmfeiwVp" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:F7Q8zu44qIbOVben" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p udp -m comment --comment "cali:-QZG79DohFjalQBb" -m comment --comment "Allow IPv4 VXLAN packets to other allowed hosts" -m multiport --dports 4789 -m addrtype --src-type LOCAL -m set --match-set cali40all-vxlan-net dst -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:iC1pSPgbvgQzkUk_" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:4Zh7KtRvt4W5AEBR" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:Y0k-bqjt-5CUqyUq" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-wl-dispatch -i cali4b77035236e -m comment --comment "cali:cfZq9-4yB1q1Z2Ci" -g cali-fw-cali4b77035236e
-A cali-from-wl-dispatch -i calie7c5034ed69 -m comment --comment "cali:H2Mwu4F8qN13_Gem" -g cali-fw-calie7c5034ed69
-A cali-from-wl-dispatch -m comment --comment "cali:sExbR1xISYwlv2YM" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali4b77035236e -m comment --comment "cali:VUPkF8rP11aZfVoC" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali4b77035236e -m comment --comment "cali:b2tMndHWpbJ6u_4A" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali4b77035236e -m comment --comment "cali:i4gKp7_lE4o_DKsc" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali4b77035236e -p udp -m comment --comment "cali:4Arhj59rk0jvtpRK" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali4b77035236e -p ipencap -m comment --comment "cali:togl8tgR4W4IBC6v" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali4b77035236e -m comment --comment "cali:fNDHWGG0FYTh_LeD" -j cali-pro-kns.kube-system
-A cali-fw-cali4b77035236e -m comment --comment "cali:cg3vpLsoftjuyYg-" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali4b77035236e -m comment --comment "cali:9yccafM_JtkeIsvn" -j cali-pro-_PTRGc0U-L5Kz7V6ERW
-A cali-fw-cali4b77035236e -m comment --comment "cali:apDCqa1n1sskPZ5p" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali4b77035236e -m comment --comment "cali:m_c672VZZOv7pgOe" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:BoBuPBQd3HdwTd-I" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:kPHCojyqWImPJfTG" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:wh8pwksRnqf8oWFv" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calie7c5034ed69 -p udp -m comment --comment "cali:1oR95x1eYskZWwzn" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calie7c5034ed69 -p ipencap -m comment --comment "cali:720Vn9aky1gmnTZV" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:Fvf-dvs6bGZctjFV" -j cali-pro-kns.kube-system
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:bGR_hTZ5vGif4jnM" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:fkEVOynVdfiBeE7F" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:w6jjuJVbFS-H56xT" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie7c5034ed69 -m comment --comment "cali:cw6Mu9Z41FTDyxe2" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pri-_PTRGc0U-L5Kz7V6ERW -m comment --comment "cali:g4z4yZxg6IEqYbOs" -m comment --comment "Profile ksa.kube-system.calico-kube-controllers ingress"
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress"
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:QIB6k7eEKdIg73Jp" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_PTRGc0U-L5Kz7V6ERW -m comment --comment "cali:DR9-t6YJRvFY-IdZ" -m comment --comment "Profile ksa.kube-system.calico-kube-controllers egress"
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress"
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:HVEEtYPJsiGRXCIt" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-to-wl-dispatch -o cali4b77035236e -m comment --comment "cali:Hbm01OpTdNR0ztyC" -g cali-tw-cali4b77035236e
-A cali-to-wl-dispatch -o calie7c5034ed69 -m comment --comment "cali:C4NMB8nc8XbxrP6K" -g cali-tw-calie7c5034ed69
-A cali-to-wl-dispatch -m comment --comment "cali:sTlJCySpkvyUb6IB" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali4b77035236e -m comment --comment "cali:VpATjSFC8M_m2kjQ" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali4b77035236e -m comment --comment "cali:37sSLh91MuPm-loa" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali4b77035236e -m comment --comment "cali:1fHtKKgDieXEbIjn" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali4b77035236e -m comment --comment "cali:3GkvcJ1nxuKUt4Xw" -j cali-pri-kns.kube-system
-A cali-tw-cali4b77035236e -m comment --comment "cali:B6pfzcWG8hGXkpuk" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali4b77035236e -m comment --comment "cali:eCBSPr2HDTpfiuiy" -j cali-pri-_PTRGc0U-L5Kz7V6ERW
-A cali-tw-cali4b77035236e -m comment --comment "cali:YP8AfVJfgwWs23xO" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali4b77035236e -m comment --comment "cali:GEfpBoI_9Pme3hM_" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:rLETYHpfIO1Yy2CM" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:SDZYRyW7oEZa92cA" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:WKoAaJfBmSQLNzbG" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:YYKZjj0I5b40cQw_" -j cali-pri-kns.kube-system
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:FOazf6EZQEl7tX0Z" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:R1mnNHNModVEowwv" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:IFABBpsFvtkvpDsY" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie7c5034ed69 -m comment --comment "cali:WFwx4hTwSf5_rgH5" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Sat Jul  6 13:55:51 2024
